--- a/proyect_name/styles/styles.scss
+++ b/proyect_name/styles/styles.scss
@@ -1,6 +1,8 @@
 /* Configuraciones, globales y utilidades */
 @import './lib/_config.scss';
+@import './lib/_utilities.scss';
 @import './lib/_globales.scss';
+
 
 /* Librerias y componentes */
 @import './lib/_lib.scss';
