--- a/proyect_name/styles/lib/_globales.scss
+++ b/proyect_name/styles/lib/_globales.scss
@@ -2,16 +2,38 @@
     flex-wrap: wrap;
 }
 
+h1 {
+    text-align: center;
+    text-transform: capitalize;
+    letter-spacing: .5px;
+}
+
+h2,
+h3 {
+    text-align: justify;
+    @extend .padding-x;
+}
+
+p {
+    font-size: $base-fontsize;
+    padding: 20px;
+    @include respond-to (800px) {
+        font-size: $base-fontsize - 4px;
+    }
+}
+
 body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: $basefont;
     background-color: $color-w;
     overflow-y: hidden; 
     overflow-x: hidden; 
     position: relative;
-    font-size: 18px;
+    font-size: $base-fontsize;
+
+        @include body_max-width;
 }
 
 table {
